Unloaded menu from hierarchy once button states are changed
Single player - Unloads menu, in preparation of spawning ssingle player controller

Multiplayer - Shows "host" and "join", once either is clicked, unload menu from hierarchy and spawn respective netcode objects (wip)

--- a/Floreo-Interview-Demo/Assets/UI/main_menu.uss
+++ b/Floreo-Interview-Demo/Assets/UI/main_menu.uss
@@ -17,10 +17,10 @@
     border-right-width: 1px;
     border-bottom-width: 4px;
     border-left-width: 1px;
-    border-left-color: rgba(0, 0, 0, 0.81);
-    border-right-color: rgba(0, 0, 0, 0.81);
-    border-top-color: rgba(0, 0, 0, 0.81);
-    border-bottom-color: rgba(0, 0, 0, 0.81);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
 }
 
 .menu-text {
